[tool.poetry]
name = "debridge-farm"
version = "0.1.0"
description = ""
authors = ["yuriallexei <yurialexei@ciencias.unam.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
